[package]
name = "tx-spam"
version = "0.1.0"
edition = "2021"

[dependencies]
monero-serai = { git = "https://github.com/Cuprate/serai.git", rev = "d27d934" }

tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
futures = { version = "0.3.30", default-features = false }

clap = { version = "4.5.4", features = ["derive"] }

rand = "0.8.5"